--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <div class="box">9</div>
         </div>
       </div>
+      <button type="reset">reset</button>
     </main>
     <script defer src="script.js"></script>
   </body>
