--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
   </head>
   <body>
     <main>
-      <div id="background">
-        <div class="game">
-          <div class="box">1</div>
-          <div class="box">2</div>
-          <div class="box">3</div>
-          <div class="box">4</div>
-          <div class="box">5</div>
-          <div class="box">6</div>
-          <div class="box">7</div>
-          <div class="box">8</div>
-          <div class="box">9</div>
+      <div id="gapLine">
+        <div id="board">
+          <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" stroke="black" fill="tranparent" class="cell"></svg>
+          <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" stroke="black" fill="tranparent" class="cell"></svg>
+          <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" stroke="black" fill="tranparent" class="cell"></svg>
+          <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" stroke="black" fill="tranparent" class="cell"></svg>
+          <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" stroke="black" fill="tranparent" class="cell"></svg>
+          <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" stroke="black" fill="tranparent" class="cell"></svg>
+          <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" stroke="black" fill="tranparent" class="cell"></svg>
+          <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" stroke="black" fill="tranparent" class="cell"></svg>
+          <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" stroke="black" fill="tranparent" class="cell"></svg>
         </div>
       </div>
       <button type="reset">reset</button>
