Use JS file transpiled from ReScript

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       </div>
       <button type="reset">reset</button>
     </main>
-    <script defer src="script.js"></script>
+    <!-- <script defer src="script.js"></script> -->
+    <script type="module" defer src="/rescript/src/script.bs.js"></script>
   </body>
 </html>
